Protocolos de capa de enlace y correcciones menores | Redes-Ética

--- a/4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace.md
@@ -52,7 +52,7 @@ El protocolo de ventana deslizante es un mecanismo de controla el flujo en redes
 >[!example] Cantidad Adecuada de Tramas sin Confirmar
 >Para encontrar la cantidad adecuada de tramas a enviar antes de bloquearse el emisor, debemos multiplicar el ancho de banda en bits/seg, por el tiempo de tránsito en un sentido.
 
-Tradicionalmente, los datos y tramas de control se enviaban por enlaces físicos separados, lo que era menos eficiente. Ahora, con el uso de conexiones _full-duplex_ o _half-duplex_, las tramas se intercalan en el mismo enlace. Para mejorar la eficiencia, en lugar de enviar una trama de control independiente tras recibir una de datos, el receptor espera a que la capa de red le pase el siguiente paquete de datos, y anexa la confirmación de recepción a esta trama mediante un campo del encabezado. Así, la confirmación viaja con la siguiente trama de datos, optimizando el uso del enlace y reduciendo las tramas de control enviadas. Esta técnica se conoce como _**superposición (piggybacking)**_. Por supuesto, si uno de los nodos tiene que enviar una confirmación pero no tiene datos para enviar, se enviará una trama de confirmación.
+Tradicionalmente, los datos y tramas de control se enviaban por enlaces físicos separados, lo que era menos eficiente. Ahora, con el uso de conexiones _full-duplex_ o _half-duplex_, las tramas se intercalan en el mismo enlace. Para mejorar la eficiencia, en lugar de enviar una trama de control independiente tras recibir una de datos, el receptor espera a que la capa de red le pase el siguiente paquete de datos, y anexa la confirmación de recepción a esta trama mediante un campo del encabezado. Así, la confirmación viaja con la siguiente trama de datos, optimizando el uso del enlace y reduciendo las tramas de control enviadas. Esta técnica se conoce como ****superposición (piggybacking)***. Por supuesto, si uno de los nodos tiene que enviar una confirmación pero no tiene datos para enviar, se enviará una trama de confirmación.
 
 >[!tldr] Envió de Tramas de Confirmación
 >A la hora de enviar acuses de recibo al emisor, el receptor no necesita enviar una confirmación para todas las tramas, solo vasta con enviar cual es el número de secuencia de la trama que está esperando (Receive Ready).
