--- a/5º Año/Ética y Deontología  Profesional/Unidad 1/1. Introduccion Conceptos.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 1/1. Introduccion Conceptos.md
@@ -1,9 +1,9 @@
 Se introducirán los siguientes conceptos:
 
 - **Moral**: La moral es el conjunto de costumbres y normas que se consideran buenas para dirigir o juzgar el comportamiento de las personas en una comunidad.​
-- **Etica**: Rama de la filosofía que estudia la conducta humana, ​​ lo correcto y lo incorrecto. Es la teoría o ciencia del comportamiento moral.
+- **Ética**: Rama de la filosofía que estudia la conducta humana, ​​ lo correcto y lo incorrecto. Es la teoría o ciencia del comportamiento moral.
 
-En este contexto un código moral, son un conjunto de reglas o normas que suelen generarse en el ámbito familiar, escolar, religioso o estatal. Las cuales se utilizan para rigir la conducta o el comportamiento de un ser humano en relación a la sociedad, a sí mismo o a todo lo que lo rodea. Otra perspectiva la define como el conocimiento de lo que el ser humano debe de hacer o evitar para conservar estabilidad social.
+En este contexto un código moral, son un conjunto de reglas o normas que suelen generarse en el ámbito familiar, escolar, religioso o estatal. Las cuales se utilizan para regir la conducta o el comportamiento de un ser humano en relación a la sociedad, a sí mismo o a todo lo que lo rodea. Otra perspectiva la define como el conocimiento de lo que el ser humano debe de hacer o evitar para conservar estabilidad social.
 La ética es una rama de la filosofía que se ocupa del estudio racional de la moral, la virtud, el deber, la felicidad y el buen vivir. **Ética = Moral reflexionada o analizada.**
 
 >[!Note] El Proceso Justo
@@ -23,7 +23,7 @@ La falta de moral o ética en tu profesión trae consigo muchos problemas, entre
 >2. **Rendición de cuentas:** Es un mecanismo para evaluar las responsabilidades por decisiones tomadas y acciones realizadas.
 >3. **Responsabilidad legal:** Característica de los sistemas políticos que permite a los individuos resarcirse de los daños causados por otros individuos, sistemas u organizaciones.
 
-### Análisis Ético
+#### Análisis Ético
 
 Una situación que implica directa o indirectamente aspectos éticos debe analizarse de la siguiente manera:
 
@@ -81,7 +81,7 @@ Se puede entender a la ética informática desde dos puntos desde dos puntos de 
 
 ### Ética en Internet
 
-Al igual que sucedió con el avance de las tecnologías de la información en desarrollo de Internet generó nuevos problemas éticos:
+Al igual que sucedió con el avance de las tecnologías de la información, el desarrollo de Internet generó nuevos problemas éticos:
 
 - **Privacidad:** Éste ha sido, probablemente, el primer tópico que se planteó en relación con las nuevas tecnologías y aquel que ha recibido mayor atención por parte de la opinión pública.
 - **Control y vigilancia en el lugar de trabajo:** Estrechamente vinculada con el problema de la privacidad, pero con elementos claramente diferenciados, es toda la problemática referida al control y vigilancia en el lugar de trabajo.
