--- a/4º Año/Logica para las Ciencias  Informaticas/Unidad 1/1. Teorias Formales.md
+++ b/4º Año/Logica para las Ciencias  Informaticas/Unidad 1/1. Teorias Formales.md
@@ -24,8 +24,7 @@ Los argumentos descriptos se denominan ***argumentos deductivos***. Los argument
 2. Sócrates es un Gonk.
 3. Luego, Sócrates es un Tronk.
 
-Se observa que tiene la misma forma que el argumento sobre la mortalidad de Sócrates.
-Si en esta forma se reemplazan consistentemente las palabras, se obtiene un argumento válido. Es decir, cualquier situación que haga falsa la conclusión también hará falsa al menos una premisa. Por ejemplo
+Se observa que tiene la misma forma que el argumento sobre la mortalidad de Sócrates. Si en esta forma se reemplazan consistentemente las palabras, se obtiene un argumento válido. Es decir, cualquier situación que haga falsa la conclusión también hará falsa al menos una premisa. Por ejemplo:
 
 1. Todos los B son C.
 2. A es un B.
@@ -87,7 +86,6 @@ Todas estas componentes se pueden ver como conjuntos, que se engloban unos a otr
 
 ![[componentes-teoria-formal.png]]
 
-
 >[!tldr] Conjuntos Contables
 >Un conjunto es ***numerable*** si puede construirse una correspondencia biunívoca con el conjunto $\mathbb{N}$ de los números naturales. Un conjunto se considera ***contable*** si es finito o numerable, por ejemplo:
 >- {a, b, c} -> Finito
@@ -99,8 +97,7 @@ Todas estas componentes se pueden ver como conjuntos, que se engloban unos a otr
 
 #### Esquemas, Meta-Variables e Instancias
 
-Un esquema provee un molde para especificar la forma de una expresión y se usan generalmente para expresar la forma de las fórmulas bien formadas. Por ejemplo, dado un conjunto de símbolos $\{1, 2, +, x, z\}$, en donde 1, 2, x y z con formulas bien formadas y siendo $P$ y $Q$ formulas bien formadas entonces $Q + P + Q$ (esquema) también es una formula bien formada.
-En este ejemplo tanto $P$ como $Q$ no son elementos del lenguaje sino que hablan sobre el lenguaje, es decir especifican como escribir expresiones validas en ese lenguaje, por eso se dice que son meta-variables.
+Un esquema provee un molde para especificar la forma de una expresión y se usan generalmente para expresar la forma de las fórmulas bien formadas. Por ejemplo, dado un conjunto de símbolos $\{1, 2, +, x, z\}$, en donde 1, 2, x y z son formulas bien formadas y siendo $P$ y $Q$ formulas bien formadas entonces $Q + P + Q$ (esquema) también es una formula bien formada. En este ejemplo tanto $P$ como $Q$ no son elementos del lenguaje sino que hablan sobre el lenguaje, es decir especifican como escribir expresiones validas en ese lenguaje, por eso se dice que son meta-variables.
 Una ***instancia*** de un esquema se obtiene reemplazando cada meta-variable por una misma expresión del lenguaje. Por ejemplo:
 
 1. x + 2 + x
@@ -126,10 +123,10 @@ Veamos algunos ejemplos de diferentes formas de describir reglas de inferencia, 
 Sea $S$ un conjunto de formulas bien formadas y sea $P$ una formula bien formada en una teoría formal $T$, decimos que $P$ es deducible de $S$ en $T$, denotado $S \vdash P$, si existe una secuencia de formulas bien formadas de $T$, $P_1, P_2, \cdots, P_n$ tal que:
 
 1. $P_n$ es $P$.
-2. Para $1 \leq i \leq n$, $P_i$ una instancia de un axioma, o bien $P_i$ es una formula bien formada perteneciente a $S$ o bien $P_i$ es una consecuencia directa de algunas $P_j$ con $j < i$, necesarios para la aplicación de algunas de las reglas de inferencia de $T$.
+2. Para $1 \leq i \leq n$, $P_i$ es una instancia de un axioma, o bien $P_i$ es una formula bien formada perteneciente a $S$ o bien $P_i$ es una consecuencia directa de algunas $P_j$ con $j < i$, necesarios para la aplicación de algunas de las reglas de inferencia de $T$.
 
 El conjunto $S$, se llama ***conjunto de hipótesis***, la secuencia $P_1, P_2, \cdots, P_n$ se llama ***derivación o prueba*** de $P$ a partir de $S$ en $T$.
-Sea $P$ una formula bien formada de una teoría $T$, entonces si $P$, puede ser deducible del conjunto vacío ,denotado $\vdash P$, se dice que $P$ es un teorema en $T$ o que es demostrable en $T$. Es decir, en la secuencia de $P_i$ sólo aparecen instancias de axiomas o el resultado de aplicación de reglas de inferencia de $T$.
+Sea $P$ una formula bien formada de una teoría $T$, entonces si $P$, puede ser deducible del conjunto vacío ,denotado $\vdash P$, se dice que $P$ es un teorema en $T$ o que es demostrable en $T$. Es decir, en la secuencia de $P_i$ sólo aparecen instancias de axiomas o son el resultado de aplicación de reglas de inferencia de $T$.
 
 >[!tldr] Propiedades de la Deducción
 >Sean $S_1$ y $S_2$ conjuntos de formulas bien formadas, y $P$ y $Q$ formulas bien formadas de una teoría $T$, entonces:
