Unidad 10 Concurrencia done | DB

--- a/4º Año/Logica para las Ciencias  Informaticas/Unidad 1/1. Teorias Formales.md
+++ b/4º Año/Logica para las Ciencias  Informaticas/Unidad 1/1. Teorias Formales.md
@@ -57,7 +57,7 @@ Al definir un lenguaje declarativo es necesario dar cuenta de tres componentes e
 
 1. **Sintaxis**: Define la manera en la que se escriben ***fórmulas legales*** en el lenguaje, establece cuales son los símbolos legales del lenguaje y las reglas bajo las cuales formar expresiones aceptables o válidas. 
 2. **Semántica**: Determina el significado de las sentencias del lenguaje en el dominio, es decir, su designación en ese dominio. Así, se pone de manifiesto un compromiso en la relación de los símbolos del lenguaje con el dominio. Este compromiso semántico permite discutir la ***correctitud*** y/o ***veracidad*** del conocimiento de manera independiente al uso que de él se haga.
-3. **Pragmática**: Especifica el dominio para el cual se utilizará
+3. **Pragmática**: Especifica el dominio para el cual se utilizará.
 
 Es posible que para cierto tipo de lenguajes sea necesario incluir o separar otros componentes, como lo puede ser la pronunciación o las tonadas.
 
