Introducción a LAN y IEEE 802

--- a/4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace de Datos.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace de Datos.md
@@ -48,10 +48,6 @@ Otro aspecto importante en el diseño de la capa de enlace de datos es qué hace
 ### Protocolos de Ventanas Deslizantes
 
 El protocolo de ventana deslizante es un mecanismo de controla el flujo en redes que permite al emisor enviar múltiples tramas antes de necesitar una confirmación (ACK), aumentando la eficiencia. Tanto el emisor como el receptor tienen una "ventana" que indica el número de tramas que se pueden transmitir sin confirmar. El emisor envía un un número $w$  de tramas, cada una con un número de secuencia. El receptor recibe las tramas y envía ACKs para las tramas correctas. Al recibir un ACK, la ventana del emisor se desplaza, permitiendo enviar nuevas tramas.
-
->[!example] Cantidad Adecuada de Tramas sin Confirmar
->Para encontrar la cantidad adecuada de tramas a enviar antes de bloquearse el emisor, debemos multiplicar el ancho de banda en bits/seg, por el tiempo de tránsito en un sentido.
-
 Tradicionalmente, los datos y tramas de control se enviaban por enlaces físicos separados, lo que era menos eficiente. Ahora, con el uso de conexiones _full-duplex_ o _half-duplex_, las tramas se intercalan en el mismo enlace. Para mejorar la eficiencia, en lugar de enviar una trama de control independiente tras recibir una de datos, el receptor espera a que la capa de red le pase el siguiente paquete de datos, y anexa la confirmación de recepción a esta trama mediante un campo del encabezado. Así, la confirmación viaja con la siguiente trama de datos, optimizando el uso del enlace y reduciendo las tramas de control enviadas. Esta técnica se conoce como ****superposición (piggybacking)***. Por supuesto, si uno de los nodos tiene que enviar una confirmación pero no tiene datos para enviar, se enviará una trama de confirmación.
 
 >[!tldr] Envió de Tramas de Confirmación
@@ -74,11 +70,13 @@ Estos mecanismos se denominan genéricamente ***solicitud de repetición automá
 3. **ARQ con rechazo selectivo**: El emisor solo se retransmite las tramas que reciben una confirmación negativa (SREJ) por parte del receptor o aquellas cuyo temporizador haya expirado.
 
 >[!tldr] Eficiencia del Rechazo Selectivo
->El rechazo selectivo puede parecer más eficiente que la adelante-atras N, ya que minimiza las retransmisiones. Sin embargo, el receptor necesita memoria temporal suficiente para almacenar las tramas posteriores a una SREJ y lógica adicional para reinsertar la trama corregida. Asimismo, el transmisor requiere lógica más compleja para enviar tramas fuera de orden. Estas complicaciones hacen que el rechazo selectivo se use menos que la vuelta atrás N, aunque es común en enlaces satelitales debido al alto retardo de propagación.
+>El rechazo selectivo puede parecer más eficiente que la adelante-atras-N, ya que minimiza las retransmisiones. Sin embargo, el receptor necesita memoria temporal suficiente para almacenar las tramas posteriores a una SREJ y lógica adicional para reinsertar la trama corregida. Asimismo, el transmisor requiere lógica más compleja para enviar tramas fuera de orden. Estas complicaciones hacen que el rechazo selectivo se use menos que adelante-atras-N, aunque es común en enlaces satelitales debido al alto retardo de propagación.
+
+Existe una relación entre el método de corrección de errores y la cantidad de tramas que se pueden enviar antes de recibir una confirmación en un protocolo de ventana deslizante. En general, para el esquema de adelanto-atrás-N, el tamaño máximo de la ventana es igual a $2^n - 1$. Enviar esta cantidad de tramas simultáneamente evita la colisión de los números de secuencia asignados a cada trama, lo que reduce la posibilidad de enviar tramas incorrectas. En contraste, el esquema de rechazo selectivo permite enviar hasta $2^{n-1}$ tramas simultáneamente. Esta cantidad es más limitada porque es necesario mantener en memoria el resto de las tramas, lo que incrementa la probabilidad de colisiones de números de secuencia si se envían muchas tramas a la vez.
 
 ### Técnicas Para la Detección de Errores
 
-Las técnicas de detección y corrección de errores permiten al receptor detectar en ocasiones, pero no siempre, que se han producido errores en los bits. Incluso utilizando bits de detección de errores pueden seguir existiendo errores de bit no detectados. Por tanto, lo que intentaremos será elegir un esquema de detección de errores que haga que la probabilidad de que se produzcan estos casos sea pequeña. Por regla general, cuanto más sofisticadas son las técnicas de detección y corrección de errores mayores son los recursos adicionales necesarios
+Las técnicas de detección y corrección de errores permiten al receptor detectar en ocasiones, pero no siempre, que se han producido errores en los bits. Incluso utilizando bits de detección de errores pueden seguir existiendo errores de bit no detectados. Por tanto, lo que intentaremos será elegir un esquema de detección de errores que haga que la probabilidad de que se produzcan estos casos sea pequeña. Por regla general, cuanto más sofisticadas son las técnicas de detección y corrección de errores mayores son los recursos adicionales necesarios.
 
 #### Comprobación de Paridad
 
