Acceso al medio, redes Ethernet y correcciones menores | Redes-DB

--- a/4º Año/Bases de Datos/Unidad 6/2. Normalizacion y Formas Normales.md
+++ b/4º Año/Bases de Datos/Unidad 6/2. Normalizacion y Formas Normales.md
@@ -41,43 +41,49 @@ Un esquema $R$ se encuentra en la forma normal de Boyce-Codd con respecto a un c
 
 Para verificar si una dependencia funcional no trivial $X \rightarrow Y$ causa alguna violación dela forma normal de Boyce-Codd, primero se debe calcular $X^+$ y asegurarse que estén incluidos todos los atributos en $R$, esto nos asegura que $X$ es una super clave de $R$.
 Este test se puede simplificar, ya que solo basta con chequear aquellas dependencias funcionales de $F$ para las cuales surge una violación de la forma normal,  en caso de que ninguna de las dependencias funcionales cause una violación a la forma normal de Boyce-Codd, entonces ninguna dependencia funcional en $F^+$ causará una violación a esta forma normal.
-No obstante, usar solo el conjunto $F$ es incorrecto cuando se testea una relación en una descomposición de $R$. Por ejemplo dado $R(A, B, C, D)$ con $F = \{ X \rightarrow Y, B \rightarrow C\}$, se descompone $R$ en $R_1(A, B)$ y $R_2(A, C, D)$, en este caso ninguna de las dependencias funcionales de $F$ causa una violación a las dependencias y los esquemas parecerías conservar al forma normal de Bayce-Codd, pero si tomamos $F^+$ veremos que se puede inferir $A \rightarrow C$, por lo que $R_2$ violaría las la forma normal de Bayce-Codd y tendría que ser dividida.
+No obstante, usar solo el conjunto $F$ es incorrecto cuando se testea una relación en una descomposición de $R$. Por ejemplo dado $R(A, B, C, D)$ con $F = \{ A \rightarrow B, B \rightarrow C\}$, se descompone $R$ en $R_1(A, B)$ y $R_2(A, C, D)$, en este caso ninguna de las dependencias funcionales de $F$ causa una violación a las dependencias y los esquemas parecerías conservar la forma normal de Bayce-Codd, pero si tomamos $F^+$ veremos que se puede inferir $A \rightarrow C$, por lo que $R_2$ violaría las la forma normal de Bayce-Codd y tendría que ser dividida.
 
 >[!tldr] Determinación de Claves Candidatas
 >El método para encontrar todas las claves candidatas de una relación, es mediante el cumplimiento de las siguientes condiciones.
 >
->- Siempre seran claves candidatas si:
+>- Siempre serán claves candidatas si:
 >	- Solo aparece en el lado izquierdo de las dependencias funcionales.
 >	- Solo atributos que aparecen en los dominios mínimos.
 >	- Atributos que no aparecen en ninguna dependencia funcional.
->- Nunca seran claves candidatas si:
+>- Nunca serán claves candidatas si:
 >	- El atributo solo aparecen del lado derecho de las dependencias funcionales.
 >
->Todos aquellos atributos que no encajen en nunguna de estas áreas, puede que tal vez sean claves candidatas
+>Todos aquellos atributos que no encajen en ninguna de estas áreas, puede que tal vez sean claves candidatas
+
+El algoritmo para transformar un esquema $R$ es un esquema en forma normal de Boyce-Codd consta de los siguientes pasos:
+
+1. Se calcula $F^+$ para el conjunto de dependencias funcionales $F$.
+2. Para cada dependencia funcional de la forma $X \rightarrow Y$ no trivial, se crea un nuevo esquema $R_i(X, Y)$. Nuestro esquema original está compuesto de la siguiente manera $R = R-R_i \cup R_i -Y$.
+3. El nuevo esquema $R_i$ ya está en forma normal de Boyce-Codd, por lo que se tiene que seguir verificando si no existen más dependencias funcionales que violan las restricciones.
+4. El proceso de descomposición se repite hasta que ya no se encuentran más dependencias funcionales no triviales.
 
 Para chequear si un esquema $R_i$ en una descomposición de $R$ está en forma normal de Boyce-Codd, se puede hacer de dos maneras:
 
 1. Se puede testear $R_i$ para la forma normal de Boyce-Codd con respecto a la restricción de $F$ a $R_i$, es decir, evaluar si se cumplen todas las dependencias funcionales de $F^+$ que contengan atributos de $R_i$.
 2. Se puede usar el conjunto $F$ original de dependencias funcionales sobre $R$ y testear lo siguiente:
-	- Para cada conjunto de atributos $X \subseteq R_i$, calcular $X^+$ y verificar que esta clausura incluya todos los atributos de $R_i$ o que no incluya ningún atributo de $R_i - X$. Si la condición es violada por algún $X \rightarrow Y$ en el conjunto $F$, la dependencia funcional $X \rightarrow (X^+ -x) \cap R_i$ se mantiene en $R_i$, y $R_i$ viola la forma normal de Bayce-Codd. Por lo que se debe usar las dependencias funcionales anteriores para descomponer $R_i$.
+	- Para cada conjunto de atributos $X \subseteq R_i$, calcular $X^+$ y verificar que esta clausura incluya todos los atributos de $R_i$ o que no incluya ningún atributo de $R_i - X$. Si la condición es violada por algún $X \rightarrow Y$ en el conjunto $F$, la dependencia funcional $X \rightarrow (X^+ -X) \cap R_i$ se mantiene en $R_i$, y $R_i$ viola la forma normal de Bayce-Codd. Por lo que se debe usar las dependencias funcionales anteriores para descomponer $R_i$.
 
-No siempre se podrá obtener una descomposición en la forma normal de Bayce-Codd que preserve todas las dependencias. Por ejemplo, consideremos que tenemos un $R = (A, B, C)$ y un conjunto de dependencias funcionales $F = \{AB \rightarrow C, C \rightarrow B\}$, en base a esas dependencias funcionales y aplicando algunos axiomas de Armstrong, obtenemos que $R$ tiene dos claves candidatas $AB$ y $AC$, por lo tanto $R$ no esta en forma normal de Boyce-Codd. El inconveniente en este caso surge en que independientemente de como descompongamos $R$ nunca se preservará la dependencia funcional $AB \rightarrow C$.
+No siempre se podrá obtener una descomposición en la forma normal de Bayce-Codd que preserve todas las dependencias. Por ejemplo, consideremos que tenemos un $R = (A, B, C)$ y un conjunto de dependencias funcionales $F = \{AB \rightarrow C, C \rightarrow B\}$, basándonos en esas dependencias funcionales y aplicando algunos axiomas de Armstrong, obtenemos que $R$ tiene dos claves candidatas $AB$ y $AC$, por lo tanto, $R$ no está en forma normal de Boyce-Codd. El inconveniente en este caso surge en que independientemente de como descompongamos $R$ nunca se preservará la dependencia funcional $AB \rightarrow C$.
 
 ### Tercera Forma Normal
 
-Existen situaciones en donde la forma normal de Boyce-Codd no preserva todas las dependencias y se requiere realizar un chequeo eficiente para corroborar que no se realizo ninguna violación de las dependencias funcionales en alguna actualización.
-La solución a estos problemas es utilizar una forma normal más débil, es decir, menos restrictiva llamada tercera forma normal. Esta forma normal permite algunas redundancias, pero las dependencias funcionales se pueden chequear sobre relaciones individuales. Además siempre va a existir una descomposición en tercera forma normal que cumpla con las propiedades de join sin perdidas y preservación de dependencias.
-
+Existen situaciones en donde la forma normal de Boyce-Codd no preserva todas las dependencias y se requiere realizar un chequeo eficiente para corroborar que no se realizó ninguna violación de las dependencias funcionales en alguna actualización.
+La solución a estos problemas es utilizar una forma normal más débil, es decir, menos restrictiva llamada tercera forma normal. Esta forma normal permite algunas redundancias, pero las dependencias funcionales se pueden chequear sobre relaciones individuales. Además, siempre va a existir una descomposición en tercera forma normal que cumpla con las propiedades de join sin perdidas y preservación de dependencias.
 Un esquema $R$ está en tercera forma normal si para todo $X \rightarrow Y \in F^+$ se cumple al menos una de las siguientes condiciones:
 
 - $X \rightarrow Y$ es trivial.
-- $X$ es una super clave para $R$
-- Cada atributo $A$ en $Y - X$ esta contenido en alguna clave candidata de $R$. Cada atributo puede estar en diferentes claves primarias.
+- $X$ es una superclave para $R$.
+- Cada atributo $A$ en $Y - X$ está contenido en alguna clave candidata de $R$. Cada atributo puede estar en diferentes claves primarias.
 
-Cabe aclarar que si una relación está en una forma normal de Boyce-Codd está también en tercera forma normal. Además la tercera condición es una relajación de la forma normal de Boyce-Codd para asegurar la preservación de dependencias.
+Cabe aclarar que si una relación está en una forma normal de Boyce-Codd está también en tercera forma normal. Además, la tercera condición es una relajación de la forma normal de Boyce-Codd para asegurar la preservación de dependencias.
 
 >[!example] Ejemplo de Tercera Forma Normal
->Retomando el mismo ejemplo anterior donde tenemos un esquema $R = (A, B, C)$ y un conjunto de dependencias funcionales $F = \{AB \rightarrow C, C \rightarrow B\}$ teniendo como claves candidatas $AB$ y $AC$, en este casi la relación cumple con la tercera forma normal, ya que $AB$ es una super clave y $B$ forma parte de una clave candidata.
+>Retomando el mismo ejemplo anterior donde tenemos un esquema $R = (A, B, C)$ y el conjunto $F = \{AB \rightarrow C, C \rightarrow B\}$ de dependencias funcionales, teniendo como claves candidatas $AB$ y $AC$, en este casi la relación cumple con la tercera forma normal, ya que $AB$ es una superclave y $B$ forma parte de una clave candidata.
 >Aunque la relación cumple con la tercera forma normal, todavía puede haber alguna redundancia. Por ejemplo, el valor de $B$ puede determinarse tanto directamente a través de $C$ como combinando $A$ y $B$. Esto podría llevar a inconsistencias si no se manejan adecuadamente las actualizaciones. Para evitar esto se puede descomponer $R$ en $R_1 = (A, C)$ y $R_2 = (C, B)$ siguiendo la forma normal de Boyce-Codd, para verificar que la relación original $AB \rightarrow C$ se cumpla para esta descomposición necesitaremos realizar un `JOIN` entre ambos esquemas.
 
 La ventaja que te brinda la tercera forma normal es que solo se necesita chequear la dependencias funcionales en $F$, evitando así tener que calcular $F^+$ y verificar todas las dependencias. Para realizar este chequeo podemos utilizar las clausuras de atributos en cada dependencia funcional $X \rightarrow Y$, si $X$ es una super clave. Si $X$ no resulta ser una super clave, debemos verificar que cada atributo en $Y$ forme parte de alguna super clave. Este test es bastante costoso dado que involucra la búsqueda de claves candidatas. Existe un algoritmo que se puede utilizar para calcular la tercera forma normal, el cual consta de los siguientes pasos:
