[Refactor] corrections in unit 5.1 redes

--- a/4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace de Datos.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace de Datos.md
@@ -48,10 +48,10 @@ Otro aspecto importante en el diseño de la capa de enlace de datos es qué hace
 ### Protocolos de Ventanas Deslizantes
 
 El protocolo de ventana deslizante es un mecanismo de controla el flujo en redes que permite al emisor enviar múltiples tramas antes de necesitar una confirmación (ACK), aumentando la eficiencia. Tanto el emisor como el receptor tienen una "ventana" que indica el número de tramas que se pueden transmitir sin confirmar. El emisor envía un un número $w$  de tramas, cada una con un número de secuencia. El receptor recibe las tramas y envía ACKs para las tramas correctas. Al recibir un ACK, la ventana del emisor se desplaza, permitiendo enviar nuevas tramas.
-Tradicionalmente, los datos y tramas de control se enviaban por enlaces físicos separados, lo que era menos eficiente. Ahora, con el uso de conexiones _full-duplex_ o _half-duplex_, las tramas se intercalan en el mismo enlace. Para mejorar la eficiencia, en lugar de enviar una trama de control independiente tras recibir una de datos, el receptor espera a que la capa de red le pase el siguiente paquete de datos, y anexa la confirmación de recepción a esta trama mediante un campo del encabezado. Así, la confirmación viaja con la siguiente trama de datos, optimizando el uso del enlace y reduciendo las tramas de control enviadas. Esta técnica se conoce como ****superposición (piggybacking)***. Por supuesto, si uno de los nodos tiene que enviar una confirmación pero no tiene datos para enviar, se enviará una trama de confirmación.
+Tradicionalmente, los datos y tramas de control se enviaban por enlaces físicos separados, lo que era menos eficiente. Ahora, con el uso de conexiones _full-duplex_ o _half-duplex_, las tramas se intercalan en el mismo enlace. Para mejorar la eficiencia, en lugar de enviar una trama de control independiente tras recibir una de datos, el receptor espera a que la capa de red le pase el siguiente paquete de datos, y anexa la confirmación de recepción a esta trama mediante un campo del encabezado. Así, la confirmación viaja con la siguiente trama de datos, optimizando el uso del enlace y reduciendo las tramas de control enviadas. Esta técnica se conoce como ***superposición (piggybacking)***. Por supuesto, si uno de los nodos tiene que enviar una confirmación pero no tiene datos para enviar, se enviará una trama de confirmación.
 
 >[!tldr] Envió de Tramas de Confirmación
->A la hora de enviar acuses de recibo al emisor, el receptor no necesita enviar una confirmación para todas las tramas, solo vasta con enviar cual es el número de secuencia de la trama que está esperando (Receive Ready).
+>A la hora de enviar ACK al emisor, el receptor no necesita enviar una confirmación para todas las tramas, solo basta con enviar cual es el número de secuencia de la trama que está esperando (Receive Ready).
 >La mayoría de los protocolos también permiten que cualquiera de los participantes pueda interrumpir totalmente la transmisión de tramas desde el otro extremo a través de un mensaje especial (Receive Not Ready).
 
 ## Control de Errores
@@ -66,7 +66,7 @@ El control de errores hace referencia a los mecanismos necesarios para la detecc
 Estos mecanismos se denominan genéricamente ***solicitud de repetición automática (ARQ)***; el objetivo de estos esquema es convertir un enlace de datos no fiable en fiable. Hay tres variantes ARQ estandarizadas:
 
 1. **ARQ con parada y espera**: El emisor transmite una única trama y espera la confirmación (ACK) antes de enviar otra. Si la confirmación se pierde, un temporizador obliga al emisor a retransmitir la trama para evitar una espera infinita.
-2. **ARQ con adelante-atras N**: El emisor envía una serie de tramas numeradas secuencialmente hasta un valor máximo. Si no hay errores en ninguna de las tramas, el receptor confirma las tramas recibidas, en caso contrario, el receotir envía una confirmación negativa (REJ), para posteriormente descartando la trama errónea y todas las siguientes hasta recibir la trama correcta. Al recibir la confirmación negativa, el emisor debe retransmitir la trama errónea y todas las posteriores.
+2. **ARQ con adelante-atras N**: El emisor envía una serie de tramas numeradas secuencialmente hasta un valor máximo. Si no hay errores en ninguna de las tramas, el receptor confirma las tramas recibidas, en caso contrario, el receptor envía una confirmación negativa (REJ), para posteriormente descartando la trama errónea y todas las siguientes hasta recibir la trama correcta. Al recibir la confirmación negativa, el emisor debe retransmitir la trama errónea y todas las posteriores.
 3. **ARQ con rechazo selectivo**: El emisor solo se retransmite las tramas que reciben una confirmación negativa (SREJ) por parte del receptor o aquellas cuyo temporizador haya expirado.
 
 >[!tldr] Eficiencia del Rechazo Selectivo
