[Refactor] corrections part two in unit 5.1 redes

--- a/4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace de Datos.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace de Datos.md
@@ -72,7 +72,7 @@ Estos mecanismos se denominan genéricamente ***solicitud de repetición automá
 >[!tldr] Eficiencia del Rechazo Selectivo
 >El rechazo selectivo puede parecer más eficiente que la adelante-atras-N, ya que minimiza las retransmisiones. Sin embargo, el receptor necesita memoria temporal suficiente para almacenar las tramas posteriores a una SREJ y lógica adicional para reinsertar la trama corregida. Asimismo, el transmisor requiere lógica más compleja para enviar tramas fuera de orden. Estas complicaciones hacen que el rechazo selectivo se use menos que adelante-atras-N, aunque es común en enlaces satelitales debido al alto retardo de propagación.
 
-Existe una relación entre el método de corrección de errores y la cantidad de tramas que se pueden enviar antes de recibir una confirmación en un protocolo de ventana deslizante. En general, para el esquema de adelanto-atrás-N, el tamaño máximo de la ventana es igual a $2^n - 1$. Enviar esta cantidad de tramas simultáneamente evita la colisión de los números de secuencia asignados a cada trama, lo que reduce la posibilidad de enviar tramas incorrectas. En contraste, el esquema de rechazo selectivo permite enviar hasta $2^{n-1}$ tramas simultáneamente. Esta cantidad es más limitada porque es necesario mantener en memoria el resto de las tramas, lo que incrementa la probabilidad de colisiones de números de secuencia si se envían muchas tramas a la vez.
+Existe una relación entre el método de corrección de errores y la cantidad de tramas que se pueden enviar antes de recibir una confirmación en un protocolo de ventana deslizante. En general, para el esquema de adelante-atrás-N, el tamaño máximo de la ventana es igual a $2^n - 1$. Enviar esta cantidad de tramas simultáneamente evita la colisión de los números de secuencia asignados a cada trama, lo que reduce la posibilidad de enviar tramas incorrectas. En contraste, el esquema de rechazo selectivo permite enviar hasta $2^{n-1}$ tramas simultáneamente. Esta cantidad es más limitada porque es necesario mantener en memoria el resto de las tramas, lo que incrementa la probabilidad de colisiones de números de secuencia si se envían muchas tramas a la vez.
 
 ### Técnicas Para la Detección de Errores
 
