[Refactor] corrections in unit 5 redes

--- a/4º Año/Comunicaciones y Redes/Unidad 5/3. Capa de Enlace para Redes LAN.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/3. Capa de Enlace para Redes LAN.md
@@ -45,8 +45,8 @@ Esta capa recibe un bloque de datos de la capa superior (LLC) y debe realizar fu
 >En general, todas las tramas MAC tienen un formato similar al que se muestra en la imagen presentada anteriormente. Los campos de esta trama son:
 >
 >- **Control MAC**: Este campo contiene información de control de protocolo necesaria para el funcionamiento del protocolo MAC. Por ejemplo, el nivel de prioridad o tamaño de la trama.
->- **Dirección MAC de destino**: punto de conexión física MAC en la LAN del destino de la trama.
->- **Dirección MAC de origen**: punto de conexión física MAC en la LAN del origen de la trama.
+>- **Dirección MAC de destino**: Punto de conexión física MAC en la LAN del destino de la trama.
+>- **Dirección MAC de origen**: Punto de conexión física MAC en la LAN del origen de la trama.
 >- **LLC**: Datos LLC de la capa superior.
 >- **CRC**: Campo de comprobación de redundancia cíclica, también conocido como campo de secuencia de comprobación de trama (FCS). Este campo se emplea para la detección de errores.
 >
