--- a/4º Año/Comunicaciones y Redes/Unidad 5/2. Protocolos de la Capa de Enlace.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/2. Protocolos de la Capa de Enlace.md
@@ -8,8 +8,8 @@ Para satisfacer las demandas de diversas aplicaciones, HDLC define tres tipos de
 	- **Estación secundaria**: Funciona bajo el control de la estación primaria. Las tramas generadas por la estación secundaria se denominan respuestas. La primaria establece un enlace lógico independiente con cada una de las secundarias presentes en la línea.
 	- **Estación combinada**: Combina las características de las primarias y de las secundarias, pudiendo generar tanto órdenes como respuestas.
 - **Configuraciones de enlace**:
-	- **Configuración no balanceada**: está formada por una estación primaria y una o más secundarias. Permite tanto transmisión *full-duplex* como *half-duplex*.
-	- **Configuración balanceada**: consiste en dos estaciones combinadas. Permite igualmente transmisión *full-duplex* y *half-duplex*.
+	- **Configuración no balanceada**: Está formada por una estación primaria, y una o más secundarias. Permite tanto transmisión *full-duplex* como *half-duplex*.
+	- **Configuración balanceada**: Consiste en dos estaciones combinadas. Permite igualmente transmisión *full-duplex* y *half-duplex*.
 - **Modos de transferencia**:
 	- **Modo de respuesta normal (NRM)**: Se utiliza en la configuración no balanceada. La estación primaria puede iniciar la transferencia de datos hacia la secundaria, pero la secundaria solo puede transmitir datos basándonos en respuestas a las órdenes emitidas por la primaria.
 	- **Modo balanceado asíncrono (ABM)**: Se utiliza en la configuración balanceada. En este modo, cualquier estación combinada puede iniciar la transmisión sin necesidad de recibir permiso por parte de la otra estación combinada.
@@ -37,21 +37,21 @@ Los campos de delimitación, de dirección y de control, que preceden al campo d
 
 ### Funcionamiento de HDLC
 
-El funcionamiento de HDLC implica tres fases. En la fase de inicio cualquiera de las dos partes puede solicitar la transmición de datos mediante la utilización de una de las seis órdenes previstas para fijar el modo. El uso de esta orden tiene tres objetivos primordiales:
+El funcionamiento de HDLC implica tres fases. En la fase de inicio cualquiera de las dos partes puede solicitar la transmisión de datos mediante la utilización de una de las seis órdenes previstas para fijar el modo. El uso de esta orden tiene tres objetivos primordiales:
 
 1. Avisa al otro extremo sobre la solicitud de la iniciación.
 2. Especifica cuál de los tres modos (NRM, ABM, ARM) se está solicitando.
 3. Indica si se van a utilizar números de secuencia de 3 o de 7 bits.
 
 Si el otro extremo acepta la solicitud, la entidad HDLC transmitirá una trama de confirmación no numerada al extremo iniciante. Si la solicitud se rechaza, se envía una trama de ***modo desconectado***.
-Una vez aceptada la solicitud de transmición, se establece una conexión lógica entre ambos extremos dondo paso a la fase de transmición de datos, en esta etapa ambas partes pueden empezar a enviar datos a través de Tramas-I, las cuales son enumeradas desde 0 a $n$ dependiendo de la cantidad de bits utilizados para el número de secuencia. En cada una de estas trámas cuenta con un campo $N(S)$ que contiene el número de secuencia de esa trama y un campo $N(R)$ que se utiliza para llevar a cabo la confirmación de las tramas-I recibidas;, indicando al otro extremo el número de trama-I que espera recibir.
+Una vez aceptada la solicitud de transmisión, se establece una conexión lógica entre ambos extremos donde pasa a la fase de transmisión de datos, en esta etapa ambas partes pueden empezar a enviar datos a través de Tramas-I, las cuales son enumeradas desde 0 a $n$ dependiendo de la cantidad de bits utilizados para el número de secuencia. En cada una de estas tramas cuenta con un campo $N(S)$ que contiene el número de secuencia de esa trama y un campo $N(R)$ que se utiliza para llevar a cabo la confirmación de las tramas-I recibidas; indicando al otro extremo el número de trama-I que espera recibir.
 
 >[!info] Control de Flujo y Error mediante Tramas-S
 > Las tramas-S también se usan para controlar el flujo y los errores. Este tipo de tramas pueden categorizarse de acuerdo al mensaje que transmiten al emisor:
 > 
 > - **Trama RR**: Confirma la última trama-I recibida mediante la indicación de la siguiente trama-I que se espera recibir. La trama RR se usa cuando no hay tráfico en sentido contrario en el que se puedan incluir las confirmaciones.
 > - **Trama RNR**: Confirma una trama-I, pero a la vez solicita a la entidad emisora que suspenda la transmisión de tramas-I; cuando el receptor esté de nuevo preparada, enviará una trama-S con la bandera RR.
-> - **trama REJ**: Sirve para iniciar el procedimiento ARQ con adelante-atras-N. A través de ella se indica que la última trama-I recibida se ha rechazado y, solicita la retransmisión de todas las tramas-I con números de secuencia posteriores a $N(R)$.
+> - **Trama REJ**: Sirve para iniciar el procedimiento ARQ con adelante-atras-N. A través de ella se indica que la última trama-I recibida se ha rechazado y, solicita la retransmisión de todas las tramas-I con números de secuencia posteriores a $N(R)$.
 > - **Trama SREJ**: Se usa para solicitar la retransmisión de una única trama, especifica el mecanismo de rechazo selectivo.
 
 La desconexión puede ser llevada acabo por cualquiera de las entidades, tanto por iniciativa propia o tras la petición realizada por capas superiores. HDLC lleva a cabo la desconexión mediante el envío de una ***trama DISC***. La entidad remota puede aceptar dicha desconexión mediante la devolución de una ***trama UA***, e informando a la capa de red sobre la finalización de la conexión. Cualquier trama-I pendiente de confirmación puede perderse, en cuyo caso será responsabilidad de las capas superiores su recuperación.
@@ -59,4 +59,5 @@ La desconexión puede ser llevada acabo por cualquiera de las entidades, tanto p
 ## Address Resolution Protocol (ARP)
 
 Dado que existen tanto direcciones de la capa de red como direcciones de la capa de enlace, surge la necesidad de una traducción entre ellas. El protocolo de resolución de direcciones es el encargado de realizar estas traducciones. A grandes rasgos todos los adaptadores de red tendrán un módulo ARP que recibirá una dirección IP y devolverá la dirección MAC correspondiente a ese equipo.
-La forma en la que funciona realmente ARP es muy similar a DNS, ya que se encarga de resolver correspondencias entre direcciones IP y MAC, con la diferencia de que ARP resuelve las correspondencias de direcciones IP de nodos que perteneces a una misma subred. Cada nodo en la subred tiene en su memoria una ***tabla ARP***, que contiene las correspondencias entre direcciones IP y MAC, al igual que el tiempo de vida de este registro en la tabla. No todos los nodos de la subred cuentan con una entrada para corresponder a cada dispositivo de la subred, puede que solo contenga algunas correspondencias o directamente ni una. En caso de no se pueda resolver la correspondencia a través de la tabla ARP, el nodo emisor construye un paquete especial denominado ***paquete ARP***, estos paquetes contiene varios campos, en los cuales se incluyen las direcciones MAC del emisor y la IP del receptor, este paquete se pasa al adaptador de red indicandole que el paquete será enviado a través de un broadcast MAC. El adaptador encapsula el paquete en una trama y lo envía a todos los nodos de la subred, por su parte los demás nodos reciben la trama la desempaquetan y pasa el paquete al módulo ARP donde se realiza el chequeo para ver si la dirección IP de destino se corresponde con la de ese host, en caso de que esto sea así el nodo enviará una respuesta ARP con la información correspondiente, de este modo el emisor actualizará su tabla ARP y podrá comenzar a enviar las tramas, en caso de la correspondencia no se de, el paquete es descartado.
+La forma en la que funciona realmente ARP es muy similar a DNS, ya que se encarga de resolver correspondencias entre direcciones IP y MAC, con la diferencia de que ARP resuelve las correspondencias de direcciones IP de nodos que perteneces a una misma subred. Cada nodo en la subred tiene en su memoria una ***tabla ARP***, que contiene las correspondencias entre direcciones IP y MAC, al igual que el tiempo de vida de este registro en la tabla. No todos los nodos de la subred cuentan con una entrada para corresponder a cada dispositivo de la subred, puede que solo contenga algunas correspondencias o directamente ni una. 
+En caso de no se pueda resolver la correspondencia a través de la tabla ARP, el nodo emisor construye un paquete especial denominado ***paquete ARP***, estos paquetes contiene varios campos, en los cuales se incluyen las direcciones MAC del emisor y la IP del receptor, este paquete se pasa al adaptador de red indicándole que el paquete será enviado a través de un broadcast MAC. El adaptador encapsula el paquete en una trama y lo envía a todos los nodos de la subred, por su parte los demás nodos reciben la trama la desempaquetan y pasa el paquete al módulo ARP donde se realiza el chequeo para ver si la dirección IP de destino se corresponde con la de ese host, en caso de que esto sea así el nodo enviará una respuesta ARP con la información correspondiente, de este modo el emisor actualizará su tabla ARP y podrá comenzar a enviar las tramas, en caso de la correspondencia no se pueda llevar a cabo, el paquete es descartado.
