[Refactor] corrections in unit 8.1 and 8.2 for BD

--- a/4º Año/Bases de Datos/Unidad 8/2. Indices e Indexacion.md
+++ b/4º Año/Bases de Datos/Unidad 8/2. Indices e Indexacion.md
@@ -4,7 +4,7 @@ Hay básicamente dos tipos de índices:
 - **Índices ordenados** que están basados en una disposición ordenada de los valores.
 - **Índices asociativos** los cuales están basados en una distribución uniforme de los valores a través de una serie de cajones (buckets). El valor asignado a cada cajón está determinado por una función de asociación (hash).
 
-Existen varias técnicas de ***indexación y asociación*** de indices. Cada una de estas técnica tienen su propia área de aplicación que resuelve problemas específicos que se presentan al utilizar bases de datos. Cada técnica debe ser valorada según los siguientes criterios:
+Existen varias técnicas de ***indexación y asociación*** de índices. Cada una de estas técnica tienen su propia área de aplicación que resuelve problemas específicos que se presentan al utilizar bases de datos. Cada técnica debe ser valorada según los siguientes criterios:
 
 - Tipos de acceso.
 - Tiempo de acceso.
@@ -23,7 +23,7 @@ Por lo general se suele asumir que todos los archivos están ordenados secuencia
 
 ### Índices Densos y Dispersos
 
-Un ***registro índice o entrada del índice*** consiste en del valor de la clave de búsqueda y punteros a uno o más registros con ese valor de la clave de búsqueda. Por su parte el puntero a un registro consiste en el identificador de un bloque de disco y un desplazamiento en el bloque de disco para identificar el registro dentro del bloque, de acuerdo al tipo de punteros utilizados podemos dividir a los indices ordenados en dos clases:
+Un ***registro índice o entrada del índice*** consiste en el valor de la clave de búsqueda y punteros a uno o más registros con ese valor de la clave de búsqueda. Por su parte el puntero a un registro consiste en el identificador de un bloque de disco y un desplazamiento en el bloque de disco para identificar el registro dentro del bloque, de acuerdo al tipo de punteros utilizados podemos dividir a los índices ordenados en dos clases:
 
 - **Índices densos**: Posee un registro índice por cada valor de clave de búsqueda que exista en el archivo. Los registros índices contiene el valor de la clave de búsqueda y el puntero al primer registro con el valor de esa clave de búsqueda.
 
